--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "date-fns": "^2.29.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-table": "^7.8.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/react-table": "^7.7.14"
   }
 }
